# audio360

./: .gitignore  .gitmodules  BUILD.md  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CodeOfConduct.md  INSTALL.md  LICENSE  README.md  requirements.txt
docs/: Common.tex  (+2 more)
src/: CMakeLists.txt  README.md  main.cpp  stm32f7xx_hal_conf.h
src/audio360_viz/: README.md  pubspec.yaml
src/audio360_viz/android/app/: build.gradle.kts
src/audio360_viz/lib/: baseDataService.dart  base_data_service.dart  main.dart
src/audio360_viz/lib/ble/: bluetooth_service.dart
src/audio360_viz/lib/models/: enums.dart  packet.dart
src/audio360_viz/lib/screens/: visualization_screen.dart
src/audio360_viz/lib/usb/: deserializer.dart  mock_usb_service.dart  usb_service.dart  usb_service_factory.dart
src/audio360_viz/lib/widgets/: classification_display.dart  direction_reticle.dart  sound_detection_hud.dart  system_fault_banner.dart
src/audio360_viz/test/: visualization_screen_test.dart
src/audio360_viz/test/models/: enums_test.dart
src/audio_classification/: melFilter.cpp
src/cmake/: arm-eabi-none-gcc.cmake  stm32-f7.ld
src/cmake/stm_startup/: stm32f767_startup.s
src/configs/: STM32F767ZITX_FLASH.ld  stm32f7xx_hal_conf.h  system_stm32f7xx.c
src/features/: CMakeLists.txt  packet.h
src/features/classification/: CMakeLists.txt  classification.cpp  classification.h  classificationLabel.h  classification_constants.h  dct.cpp  dct.h  lda.cpp  lda.h  mel_filter.cpp  mel_filter.h  pca.cpp  pca.h
src/features/classification/classification_module/: CMakeLists.txt  classification.cpp  classification.h
src/features/classification/discrete_cosine_transform/: CMakeLists.txt  dct.cpp  dct.h
src/features/classification/linear_discriminant_analysis/: CMakeLists.txt  lda.cpp  lda.h
src/features/diagnostics/: CMakeLists.txt  audio_anomaly_detection.cpp  audio_anomaly_detection.h  system_fault_manager.cpp  system_fault_manager.h  system_fault_states.h
src/features/doa/: CMakeLists.txt  directionLabel.h  doa.cpp  doa.h  doaAlgorithm.h  doaSmoother.cpp  doaSmoother.h  gccPhat.cpp  gccPhat.h
src/features/signal_processing/: CMakeLists.txt  fft.cpp  fft.h  frequencyDomain.h  ifft.cpp  ifft.h  window.hpp
src/hardware_interface/: CMakeLists.txt
src/hardware_interface/bluetooth/: CMakeLists.txt  bluetooth_manager.cpp  bluetooth_manager.h
src/hardware_interface/inmp441_mic/: CMakeLists.txt  embedded_mic.cpp  embedded_mic.h
src/hardware_interface/logging/: logging.hpp  serial_print.cpp  serial_print.h
src/hardware_interface/system/: CMakeLists.txt  clock.cpp  clock.h  peripheral.c  peripheral.cpp  peripheral.h  peripheral_error.cpp  peripheral_error.h  peripheral_error.hpp  stm32f7xx_hal_msp.c  stm32f7xx_it.c  stm32f7xx_it.h  syscall.c  sysmem.c
src/helper/: CMakeLists.txt  bit_operations.hpp  constants.h  exceptions.hpp  filter.hpp  hash.h  hash.hpp
src/helper/logging/: CMakeLists.txt  logging.hpp  logging.md  sd_writer.cpp  sd_writer.h
src/helper/mp3/: CMakeLists.txt  mp3.cpp  mp3.h  realTimePolling.cpp  realTimePolling.h
src/helper/operations/: CMakeLists.txt  angles.hpp  matrix.cpp  matrix.h  matrix.hpp
src/helper/plot/: plot.hpp
src/lib/: CMakeLists.txt
src/lib/fftw-3.3.10/: CMakeLists.txt
src/prototyping/: README.md  run_simulation.py
src/prototyping/audio_viz/: audio_viz_i2s.py
src/prototyping/pyroomacoustics_sim/: DOA_README.md  __main__.py  database_helper.py  doa_analysis.py  pyroom_helper.py  requirements.txt  resample_audio.py
src/prototyping/simulation/: README.md  __init__.py  classification.py  database.py  doa_analysis.py  pyproject.toml  room.py  signals.py  visualization.py
src/prototyping/visualization/: README.md  __init__.py  demo.py  example_usage.py  glasses_visualization.py  run_demo.bat  run_gui.bat  simple_test.py  sound_visualization_gui.py  test_gui.py
src/python/pyroomacoustics_prototype/: __main__.py  database_helper.py  example.py  example2.py  pyroom_helper.py  requirements.txt
src/runtimes/: CMakeLists.txt  README.md  runtime_android_comm.hpp  runtime_audio360.cpp  runtime_audio360.hpp  runtime_bluetooth_test.hpp  runtime_fft.h  runtime_fft.hpp  runtime_sd_diag.h  runtime_sd_diag.hpp  runtime_usb_tx.h  runtime_usb_tx.hpp  utils.h
src/signal_processing/: fft.cpp  fft.h  window.cpp  window.h
test/: CMakeLists.txt  README.md  fft_test.cpp  test_template.cpp
test/audio/mic_recordings/: README.md
test/audio/single_source/: README.md
test/features/: CMakeLists.txt  fft_test.cpp  packet_test.cpp
test/features/audio360_engine/: CMakeLists.txt  pipeline_test.cpp
test/features/audio_filtering/: CMakeLists.txt  amplitude_normalization_test.cpp  frequency_transform_test.cpp  spectral_leakage_test.cpp
test/features/classification/: CMakeLists.txt  classification_accuracy_test.cpp  classification_test.cpp  confidence_test.cpp  dct_test.cpp  lda_test.cpp  mel_test.cpp  pca_test.cpp
test/features/diagnostics/: CMakeLists.txt  audio_anomaly_detection_test.cpp  system_fault_manager_test.cpp  system_fault_state_machine_test.cpp
test/features/doa/: CMakeLists.txt  directionLabel_test.cpp  doa_accuracy_test.cpp  doa_smoother_test.cpp  doa_test.cpp  gccPhat_test.cpp
test/features/integration/: CMakeLists.txt  frequency_analysis_integration_test.cpp
test/features/signal_processing/: CMakeLists.txt  anomaly_test.cpp  fft_test.cpp  ifft_test.cpp  normalization_test.cpp  performance_test.cpp
test/hardware_interface/: CMakeLists.txt  peripheral_error_test.cpp
test/helper/: CMakeLists.txt  matrix_test.cpp  mode_filter_test.cpp  mode_filter_test.hpp  realTimePollingTest.cpp  realTimePolling_test.cpp  test_helper.cpp  test_helper.h
test/helper/bit_operations/: CMakeLists.txt  sign_extend_test.cpp  swap_byte_order_test.cpp
test/helper/matrix/: CMakeLists.txt  matrix_addition_test.cpp  matrix_creation_test.cpp  matrix_scale_test.cpp  matrix_subtraction_test.cpp  matrix_test.cpp  matrix_test.h  matrix_transpose_test.cpp
test/helper/mp3/: CMakeLists.txt  realTimePolling_test.cpp
test/helper/operations/: CMakeLists.txt
(+123 files in other folders)
